# AutoRpt

./: .gitignore  README.md  SECURITY.md  autorpt.py  autorpt_cfg.py  autorpt_finalize.py  autorpt_pretty.py  autorpt_startup.py  autorpt_vulns.py  autorpt_vulns_extras.py  autorpt_work.py  config.toml  config.yml  poc.py  pyproject.toml  sessions.toml  sessions.yml  setup.sh
autorpt/: cfg.py  cvss.py  finalize.py  help.py  main.py  pretty.py  startup.py  vulns.py  work.py
includes/: autorpt-enterprise-attack.csv  autorpt-ics-attack.csv  autorpt-mobile-attack.csv  autorpt-pre-attack.csv  eisvogel.LICENSE  update-includes.py  update.toml  update_includes.py
templates/ejpt/: config.yml
templates/oscp/: README  config.yml
templates/oscp/pen-300/: 00-execsummary.md  11-closing.md
templates/oscp/report/: 0-execsummary.md  1-192.168.x.x.md  4-25ptA.md  5-192.168.x.x.md  5-25pt-bufferoverflow.md  6-closing.md
templates/osda/report/: 0-execsummary.md  1-attackerphases.md  z-template.md
templates/osed/: config.yml
templates/osed/report/: 0-execsummary.md  1-assignmentX.md  2-assignmentY.md  3-assignmentZ.md  6-closing.md
templates/osee/: config.yml
templates/osee/report/: 0-execsummary.md  1-192.168.XX.XX.md  2-192.168.XX.XX.md  6-closing.md  z-template.md
templates/osep/: config.yml  targets.md
templates/osep/report/: 0-execsummary.md  (+2 more)
templates/oswe/: config.yml
templates/oswp/: config.yml
templates/pnpt/: README
templates/training/: config.yml  renameme.md
tests/: test_cfg.py  test_help.py  test_pretty.py  test_vulns.py  test_work.py
(+55 files in other folders)
